--- a/CSharpFFPlayer/CSharpFFPlayer.csproj
+++ b/CSharpFFPlayer/CSharpFFPlayer.csproj
@@ -11,6 +11,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MahApps.Metro" Version="2.4.10" />
+    <PackageReference Include="MaterialDesignThemes" Version="5.2.1" />
     <PackageReference Include="NAudio" Version="2.2.1" />
     <PackageReference Include="System.Management" Version="9.0.4" />
     <PackageReference Include="WindowsAPICodePack-Shell" Version="1.1.1" />
